--- a/.travis.yml
+++ b/.travis.yml
@@ -45,14 +45,11 @@ sudo: required
 branches:
   only:
     - master_parsa
+    - FIX_TEST
 # We will get submodules ourselves
 git:
   submodules: false
 # Builds GCC version: 5
-env:
-  global:
-      - BUILD_CMD="source ${TRAVIS_BUILD_DIR}/test_qemu.sh"
-      - TEST_CMD="source ${TRAVIS_BUILD_DIR}/test_qemu.sh"
 matrix:
   include:
     - env: # Test only build
@@ -90,4 +87,4 @@ matrix:
 before_script:
   - ${TRAVIS_BUILD_DIR}/build_qemu.sh
 script:
-  - ${TEST_CMD}
+  - ${TRAVIS_BUILD_DIR}/test_qemu.sh
